crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__type_alias_target_undeclared_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
assertion_line: 97
expression: "compilation_errors(\"\\n\\ntype Foo = UnknownType;\")"

---
error: cannot find type `UnknownType` in this scope
 --> main.mun:3:12
  |
3 | type Foo = UnknownType;
  |            ^^^^^^^^^^^ not found in this scope
  |
